--- a/main.css
+++ b/main.css
@@ -25,6 +25,7 @@
   all: unset;
   color: var(--foreground);
   font-size: 11pt;
-  font-family: "Zed Sans";
+  /* font-family: "Zed Sans"; */
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   border-radius: 16px;
 }
